--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,2 +1,8 @@
+# TCP listener for MQTT
 listener 1883
+allow_anonymous true
+
+# WebSocket listener for web clients
+listener 9001
+protocol websockets
 allow_anonymous true
